mail/templates/default/app.css
/* ... */
#mail-index_mail-index-header_right et2-details.vacationnotice::part(base) {
	background: #dee9f3;
	border-color: #0f65968f;
	border-width: 1px;
	height: 2.6em;
}

et2-hbox.mailPreviewHeaders {
	margin-bottom: 0px;
}

et2-description#mail-index_mailPreview_subject {
	margin-bottom: 0;
	margin-top: 0.3em;
}

/* Make +N tag in email look like text, not tag */
et2-select-email::part(tags) {
	width: 100%;
}

et2-select-email::part(tag) {
	flex: 10 0 auto;
}

et2-select-email::part(tag__base) {
	font-weight: bold;
	border: none;
	background: inherit;
}

et2-select-email::part(tag__content) {
	margin-left: auto;
}
et2-vbox.addresses::part(base) {
	gap: 0px;
}

